[tool.poetry]
name = "ksliln"
version = "0.0.2"
description = "ni li ilo pi kama sona kepeken ilo lawa nimi!"
authors = ["k01e <k01e.alm07@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "ksliln", from = "."},
]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.28.1"
click = "^8.1.3"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
textual = {version = "^0.28.1", extras = ["dev"]}
black = "^23.3.0"

[tool.poetry.scripts]
ksliln = "ksliln.__main__:main"

[tool.poe.tasks]
devg = "watchexec -r -e py,css -- textual run --dev ksliln.__main__:ksliln" # gui
devc = "poetry run ksliln"                                                  # cli
debug = "textual console"
stage = "./_stage.sh"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
